# purescript-opt

./: .gitignore  README.md  stack.yaml
lib/language-javascript-0.6.0.3/: language-javascript.cabal
lib/language-javascript-0.6.0.3/src/Language/JavaScript/Parser/: Lexer.x
lib/purescript-optimisation/: purescript-optimisation.cabal
lib/purescript-optimisation/src/Language/PureScript/: Optimisation.hs
lib/purescript-optimisation/src/Language/PureScript/Optimisation/JavaScript/: AST.hs  Environment.hs  Inliner.hs  Schemes.hs  Types.hs
lib/purescript-optimisation/src/Language/PureScript/Optimisation/JavaScript/AST/: Instances.hs  Patterns.hs  Strings.hs
lib/purescript-optimisation/src/Language/PureScript/Optimisation/JavaScript/Environment/: Analyses.hs  Builders.hs  Operations.hs  Traversals.hs  Types.hs
lib/purescript-optimisation/src/Language/PureScript/Optimisation/JavaScript/Inliner/: Const.hs  Identity.hs  OperatorAliases.hs  Pipeline.hs  PropertyAccessors.hs
