Name:                 purescript-optimisation
Version:              0.1.0.0
Synopsis:             Libraries for optimising PureScript and PureScript-generated JavaScript.
Description:          Please see README.md.

License:              AllRightsReserved
Category:             Language, PureScript
Build-Type:           Simple

Cabal-Version:        >= 1.10

Library
  Hs-Source-Dirs:     src
  Exposed-Modules:    Language.PureScript.Optimisation.JavaScript.Inliner

  Other-Modules:      Language.PureScript.Optimisation.JavaScript.AST
                    , Language.PureScript.Optimisation.JavaScript.AST.Instances
                    , Language.PureScript.Optimisation.JavaScript.AST.Patterns
                    , Language.PureScript.Optimisation.JavaScript.AST.Strings

                    , Language.PureScript.Optimisation.JavaScript.Environment
                    , Language.PureScript.Optimisation.JavaScript.Environment.Analyses
                    , Language.PureScript.Optimisation.JavaScript.Environment.Builders
                    , Language.PureScript.Optimisation.JavaScript.Environment.Operations
                    , Language.PureScript.Optimisation.JavaScript.Environment.Traversals
                    , Language.PureScript.Optimisation.JavaScript.Environment.Types

                    , Language.PureScript.Optimisation.JavaScript.Inliner.OperatorAliases
                    , Language.PureScript.Optimisation.JavaScript.Inliner.Pipeline
                    , Language.PureScript.Optimisation.JavaScript.Inliner.PropertyAccessors

                    , Language.PureScript.Optimisation.JavaScript.Schemes

  Build-Depends:      base
                    , containers
                    , language-javascript
                    , syb
                    , text

  Default-Language:   Haskell2010
  Ghc-Options:        -Wall -Werror
